force-app/main/default/objects/Order__c/fields/TOS_URL_For_Order__c.field-meta.xml
<CustomField>
    <fullName>TOS_URL_For_Order__c</fullName>
    <label>TOS URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>