force-app/main/default/objects/Order__c/fields/Total_Fixed_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Fixed_Volume__c</fullName>
    <description>sum of the volume of fixed positions on this order</description>
    <inlineHelpText>sum of the volume of fixed positions on this order</inlineHelpText>
    <label>Total Fixed Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>