force-app/main/default/objects/Order__c/fields/Total_Position_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Position_Volume__c</fullName>
    <description>In Dth</description>
    <inlineHelpText>In Dth</inlineHelpText>
    <label>Total Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>