force-app/main/default/objects/Order__c/fields/Web_Source__c.field-meta.xml
<CustomField>
    <fullName>Web_Source__c</fullName>
    <description>Identifies a promo / referral code on an TC order. Also first used on the Account object.</description>
    <inlineHelpText>Identifies a promotional / referral code on an TrueCost order.</inlineHelpText>
    <label>Web Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>