force-app/main/default/objects/Order__c/fields/Year_2_DA_completed__c.field-meta.xml
<CustomField>
    <fullName>Year_2_DA_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The 2nd year delegation agreement has been signed (2 year deals from 2012 only)</description>
    <inlineHelpText>The 2nd year delegation agreement has been signed (2 year deals from 2012 only)</inlineHelpText>
    <label>Year 2 DA completed</label>
    <type>Checkbox</type>
</CustomField>