force-app/main/default/objects/Order__c/fields/YRAAC_URL_For_Order__c.field-meta.xml
<CustomField>
    <fullName>YRAAC_URL_For_Order__c</fullName>
    <label>YRAAC URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>