force-app/main/default/objects/Order__c/recordTypes/Commercial_Electric_Order.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Electric_Order</fullName>
    <active>true</active>
    <label>Commercial Electric Order</label>
</RecordType>