force-app/main/default/objects/Order__c/recordTypes/Electric_Order.recordType-meta.xml
<RecordType>
    <fullName>Electric_Order</fullName>
    <active>true</active>
    <label>Electric Order</label>
</RecordType>