force-app/main/default/objects/Order__c/recordTypes/Gas_Choice_Sign_Up.recordType-meta.xml
<RecordType>
    <fullName>Gas_Choice_Sign_Up</fullName>
    <active>true</active>
    <label>Gas Choice Sign Up</label>
</RecordType>