force-app/main/default/objects/Order__c/validationRules/Account_Number_Characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Number_Characters</fullName>
    <active>true</active>
    <description>no &quot;+&quot; or other special characters allowed.</description>
    <errorConditionFormula>AND(
 Record_Type_Name__c = &quot;Gas Choice Sign Up&quot;,
NOT(REGEX( Account_Number__c , &#39;[0-9]*&#39;))
)</errorConditionFormula>
    <errorMessage>Gas choice orders must have account numbers with only numeric characters.</errorMessage>
</ValidationRule>