force-app/main/default/objects/Order__c/validationRules/Control_number_must_be_9_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Control_number_must_be_9_digits</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
   LEN( Control__c )&lt;&gt;9,
   not(isblank(Control__c ))
)</errorConditionFormula>
    <errorDisplayField>Control__c</errorDisplayField>
    <errorMessage>Order01: Control numbers must be 9 digits</errorMessage>
</ValidationRule>