force-app/main/default/objects/Order__c/validationRules/GC_Order_Rate_equals_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>GC_Order_Rate_equals_Code</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordTypeId = &quot;012300000018SzH&quot;, RIGHT( Rate__r.Name , 5)  &lt;&gt;  Confirmation_Code__c  )</errorConditionFormula>
    <errorMessage>Order03: Confirmation Code must match the Rate (last 5 digits).</errorMessage>
</ValidationRule>