force-app/main/default/objects/Order__c/validationRules/GC_Order_Rate_Year_Matches.validationRule-meta.xml
<ValidationRule>
    <fullName>GC_Order_Rate_Year_Matches</fullName>
    <active>true</active>
    <description>The rate id year must match the confirmation code year on the order</description>
    <errorConditionFormula>and(
   ISBLANK(REP_Profile__c) , RecordTypeId  = &#39;012300000018SzH&#39;,
 left(Rate__r.Name,4)  !=  Confirmation_Code_Year__c 
)</errorConditionFormula>
    <errorDisplayField>Confirmation_Code_Year__c</errorDisplayField>
    <errorMessage>Order05: The year in the rate id must match the confirmation code year on the order.</errorMessage>
</ValidationRule>