force-app/main/default/objects/Order__c/validationRules/Rejected_Order_Comment.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejected_Order_Comment</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
    AND(
        TEXT(Order_Status__c) = &quot;Rejected&quot;, 
        ISBLANK(Order_Rejection_Comments__c)), True, False
 )</errorConditionFormula>
    <errorMessage>Order 08: If an order is rejected, you must specify the reason why.</errorMessage>
</ValidationRule>