force-app/main/default/objects/Order__c/listViews/Abandoned_Orders.listView-meta.xml
<ListView>
    <fullName>Abandoned_Orders</fullName>
    <columns>NAME</columns>
    <columns>Order_Status__c</columns>
    <columns>Deposit__c</columns>
    <columns>Enrollment_Type__c</columns>
    <columns>InitialDateofService__c</columns>
    <columns>ESIID_Number__c</columns>
    <columns>Premise_Order_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>REP_Profile__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order__c.Electric_Order</value>
    </filters>
    <filters>
        <field>Order_Status__c</field>
        <operation>equals</operation>
        <value>Abandoned</value>
    </filters>
    <label>Abandoned Orders</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators_System</group>
    </sharedTo>
</ListView>