force-app/main/default/objects/Order__c/listViews/API_Exception.listView-meta.xml
<ListView>
    <fullName>API_Exception</fullName>
    <columns>NAME</columns>
    <columns>Parent_Account__c</columns>
    <columns>Commission__c</columns>
    <columns>PMVI_Flag__c</columns>
    <columns>Order_Expiration_Date__c</columns>
    <columns>Plan__c</columns>
    <columns>Rate__c</columns>
    <columns>REP_Profile__c</columns>
    <columns>Order_Status__c</columns>
    <columns>InitialDateofService__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Customer_Date_of_Birth__c</columns>
    <columns>First_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Electric Order</value>
    </filters>
    <filters>
        <field>Order_Status__c</field>
        <operation>contains</operation>
        <value>API</value>
    </filters>
    <label>API Exception</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>