force-app/main/default/objects/Order__c/listViews/Bounce_Energy.listView-meta.xml
<ListView>
    <fullName>Bounce_Energy</fullName>
    <columns>NAME</columns>
    <columns>Order_Status__c</columns>
    <columns>Parent_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Electric Order</value>
    </filters>
    <filters>
        <field>Order_Status__c</field>
        <operation>notEqual</operation>
        <value>Ready To Submit,Enroll Page - Started,Enroll Page - Complete</value>
    </filters>
    <filters>
        <field>Order_Status__c</field>
        <operation>notContain</operation>
        <value>Remote,Remoting</value>
    </filters>
    <filters>
        <field>REP_Profile__c</field>
        <operation>contains</operation>
        <value>Bounce</value>
    </filters>
    <filters>
        <field>InitialDateofService__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2014</value>
    </filters>
    <label>Bounce Energy</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators_System</group>
    </sharedTo>
</ListView>