force-app/main/default/objects/Order__c/listViews/Cancelled.listView-meta.xml
<ListView>
    <fullName>Cancelled</fullName>
    <columns>NAME</columns>
    <columns>REP_Profile__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Order_Status_TS__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>