force-app/main/default/objects/Order__c/listViews/Cancelled_Orders_for_REP.listView-meta.xml
<ListView>
    <fullName>Cancelled_Orders_for_REP</fullName>
    <columns>NAME</columns>
    <columns>Order_Status__c</columns>
    <columns>Enrollment_Type__c</columns>
    <columns>InitialDateofService__c</columns>
    <columns>ESIID_Number__c</columns>
    <columns>Premise_Order_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>REP_Profile__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order__c.Electric_Order</value>
    </filters>
    <label>6.  Cancelled Orders (By Customer)</label>
</ListView>