force-app/main/default/objects/Order__c/listViews/CC_Orders.listView-meta.xml
<ListView>
    <fullName>CC_Orders</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Parent_Account__c</columns>
    <columns>REP_Profile__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Commission__c</columns>
    <columns>PMVI_Flag__c</columns>
    <columns>Order_Expiration_Date__c</columns>
    <columns>Plan__c</columns>
    <columns>Rate__c</columns>
    <columns>Order_Status__c</columns>
    <columns>InitialDateofService__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Deposit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Card_Type__c</field>
        <operation>equals</operation>
        <value>American Express,Discover,MasterCard,Visa</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order__c.Electric_Order</value>
    </filters>
    <label>Payment Card TrueCost Orders</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>