force-app/main/default/objects/Order__c/listViews/Cirro_All_Processed.listView-meta.xml
<ListView>
    <fullName>Cirro_All_Processed</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>ESIID_Number__c</columns>
    <columns>InitialDateofService__c</columns>
    <columns>Order_Status__c</columns>
    <columns>REPStatus__c</columns>
    <columns>REPOrderSubStatus__c</columns>
    <columns>Plan__c</columns>
    <columns>Parent_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>REP_Profile__c</field>
        <operation>equals</operation>
        <value>Cirro Energy</value>
    </filters>
    <filters>
        <field>Order_Status__c</field>
        <operation>notEqual</operation>
        <value>Enroll Page - Started,Enroll Page - Complete,Plan Disclosures Page - Complete</value>
    </filters>
    <filters>
        <field>Order_Status__c</field>
        <operation>notContain</operation>
        <value>remote,remoting,enroll,abandon</value>
    </filters>
    <label>Cirro Processed Orders</label>
    <sharedTo>
        <group>Administrators_System</group>
    </sharedTo>
</ListView>