force-app/main/default/objects/Order__c/listViews/Cirro_Orders.listView-meta.xml
<ListView>
    <fullName>Cirro_Orders</fullName>
    <columns>NAME</columns>
    <columns>REP_Profile__c</columns>
    <columns>Order_Status__c</columns>
    <columns>REPOrderId__c</columns>
    <columns>REPOrderSubStatus__c</columns>
    <columns>REPStatus__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>InitialDateofService__c</columns>
    <columns>Exception__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>REP_Profile__c</field>
        <operation>equals</operation>
        <value>Cirro Energy</value>
    </filters>
    <filters>
        <field>Order_Status__c</field>
        <operation>equals</operation>
        <value>Confirmed,Approved</value>
    </filters>
    <label>Cirro</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>