force-app/main/default/objects/Order__c/listViews/Comm_Orders_for_REP.listView-meta.xml
<ListView>
    <fullName>Comm_Orders_for_REP</fullName>
    <columns>NAME</columns>
    <columns>Order_Status__c</columns>
    <columns>Enrollment_Type__c</columns>
    <columns>InitialDateofService__c</columns>
    <columns>ESIID_Number__c</columns>
    <columns>Premise_Order_Type__c</columns>
    <columns>DBA_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>REP_Profile__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Status__c</field>
        <operation>contains</operation>
        <value>New/Successfully Submitted,Approved,Pending</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order__c.Commercial_Electric_Order</value>
    </filters>
    <label>Commercial Orders in Process (REP)</label>
</ListView>