force-app/main/default/objects/Order__c/listViews/Commercial_Orders.listView-meta.xml
<ListView>
    <fullName>Commercial_Orders</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>NAME</columns>
    <columns>Parent_Account__c</columns>
    <columns>DBA_Name__c</columns>
    <columns>Plan__c</columns>
    <columns>Rate__c</columns>
    <columns>InitialDateofService__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Order_Status__c</columns>
    <columns>ESIID_Number__c</columns>
    <columns>Premise_Order_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Order_Confirmed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>contains</operation>
        <value>Electric</value>
    </filters>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>notEqual</operation>
        <value>gas</value>
    </filters>
    <filters>
        <field>kWh_rate_1000__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Premise_Order_Type__c</field>
        <operation>contains</operation>
        <value>non</value>
    </filters>
    <label>Commercial Orders</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>