force-app/main/default/objects/Order__c/listViews/Confirmed_Pending_Non_CEHE_Orders.listView-meta.xml
<ListView>
    <fullName>Confirmed_Pending_Non_CEHE_Orders</fullName>
    <columns>NAME</columns>
    <columns>Order_Status__c</columns>
    <columns>REP_Profile__c</columns>
    <columns>TDSP__c</columns>
    <columns>Enrollment_Type__c</columns>
    <columns>InitialDateofService__c</columns>
    <columns>ESIID_Number__c</columns>
    <columns>Premise_Order_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SSN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Status__c</field>
        <operation>contains</operation>
        <value>Confirmed,Approved</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Order__c.Electric_Order</value>
    </filters>
    <filters>
        <field>TDSP__c</field>
        <operation>notContain</operation>
        <value>centerpoint</value>
    </filters>
    <label>Confirmed &amp; Pending Non-CEHE Orders</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
        <group>Administrators_System</group>
    </sharedTo>
</ListView>