force-app/main/default/objects/Order__c/listViews/confirmed_without_plan_expiration.listView-meta.xml
<ListView>
    <fullName>confirmed_without_plan_expiration</fullName>
    <columns>NAME</columns>
    <columns>Parent_Account__c</columns>
    <columns>Contract_Length__c</columns>
    <columns>Commission__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>REP_Profile__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </filters>
    <filters>
        <field>Plan_Expiration__c</field>
        <operation>equals</operation>
    </filters>
    <label>confirmed without plan expiration</label>
    <sharedTo>
        <group>Administrators_System</group>
    </sharedTo>
</ListView>