force-app/main/default/objects/Order__c/listViews/Convertant_Orders.listView-meta.xml
<ListView>
    <fullName>Convertant_Orders</fullName>
    <columns>NAME</columns>
    <columns>Order_Status__c</columns>
    <columns>Enrollment_Type__c</columns>
    <columns>InitialDateofService__c</columns>
    <columns>ESIID_Number__c</columns>
    <columns>Premise_Order_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>REP_Profile__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Referral__c</field>
        <operation>equals</operation>
        <value>Convertant</value>
    </filters>
    <label>Convertant Orders</label>
    <language>en_US</language>
    <sharedTo>
        <group>Administrators_System</group>
        <group>CustomerService</group>
        <group>Customer_Service_Primary</group>
    </sharedTo>
</ListView>